# oRPG

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  Game_Description.txt  README.md  bandit.yaml  gm_prompt.de.txt  gm_prompt.txt  merged_python_files.txt  model_prices.json  oRPG.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  rpg.py  settings.json  tmp1.txt  vitest.config.js
Animate/: animate_framepack.py  instructions.txt  parallax.py
coverage/: clover.xml  coverage-final.json  index.html  test-utils.js.html
scripts/: analyze_slow_tests.py  compare_turn_costs.py  coverage_utils.py  path_utils.py  run_tests_with_timeout.py
static/: index.html  world-styles.json
tests/: conftest.py  merge.py  test_abilities.py  test_action.py  test_action_more.py  test_actions_pane_and_state.py  test_actions_snapshot.py  test_active_players.py  test_additional_coverage.py  test_allow_anyone_to_resolve.py  test_archetype.py  test_cors.py  test_coverage_utils.py  test_do_resolution.py  test_do_resolution_extra.py  test_elevenlabs.py  test_env_vars_more.py  test_error_paths.py  test_healthz.py  test_helpers.py  test_initial_scene.py  test_join.py  test_join_more.py  test_leave.py  test_media.py  test_ollama_api.py  test_ollama_api_edgecases.py  test_ollama_unavailable.py  test_party_snapshot.py  test_player.py  test_prompts.py  test_providers.py  test_resolve.py  test_resolve_concurrency.py  test_root_html.py  test_root_html_more.py  test_rpg.py  test_scripts.py  test_snapshot_scalability.py  test_state.py  (+2 more)
(+8 files in other folders)
